Modified the mobile header to fix issue with overflowing horizontally

--- a/src/components/Shared/MobileHeader/MobileHeader.module.css
+++ b/src/components/Shared/MobileHeader/MobileHeader.module.css
@@ -1,6 +1,8 @@
 .mobileHeader {
     width: 100%;
-    position: relative;
+    position: absolute;
+    overflow-x: hidden;
+    min-height: 100vh;
 }
 .menuBar {
     border-bottom: 3px solid #F7F7F8;
